--- a/Final Project.Rmd
+++ b/Final Project.Rmd
@@ -13,8 +13,8 @@ knitr::opts_chunk$set(echo = TRUE,tidy.opts = list(width.cutoff = 60), tidy = TR
 
 ## Executive summary
 In this study we analyzed the impact of a manual transmission over fuel efficiency in cars. We used our database with 32 car models from 73/74 to answer a question that many of our readers ask us. 
-Fitting a model with the transmission type, weight, horsepower and number of cylinders as predictors, we could not find a statistically significant relationship between transmission type and fuel efficiency as measured in miles per gallon.
-Then again, the study can be repeated with a better database that includes more vehicles.
+Fitting a model with the transmission type, weight and 1/4 mile type as predictors led us to find a statistically significant relationship between transmission type and fuel efficiency as measured in miles per gallon.
+However, the strength of this relationship seemed to rely on a few outliers, and our study could be repeated with a better database that includes more vehicles.
 
 ## Introduction
 Our work in the *Motor Trend* magazine includes analyzing technical details about automobiles. One question of interest to our readers is the efficiency of cars, as measures in miles per gallon, since fuel is a considerable cost of maintaining a vehicle. In this report we aim to discuss whether automatic cars are as efficient as those with manual transmission.
@@ -30,17 +30,18 @@ names(data)
 ```
 
 ## Results
-We tested various models and how additional predictors offered more information. We decided to adjust for the number of cylinders, horsepower and weight, and we find the following estimate and confidence interval for the influence of transmission type over fuel efficiency:
+We tested various models and how additional predictors offered more information. We decided to adjust for the weight and 1/4 mile time. We find the following estimate and confidence interval for the influence of transmission type over fuel efficiency:
 
 ```{r}
-summary(lm(mpg~am+hp+wt+cyl,data))$coef[2,]
-confint(lm(mpg~am+hp+wt+cyl,data))[2,]
+summary(lm(mpg~am+wt+qsec,data))$coef[2,]
+confint(lm(mpg~am+wt+qsec,data))[2,]
 ```
-While there seems to be a small increase in fuel efficiency (1.8 miles per gallon) for manual transmission cars, the confidence interval includes 0. The p-value is 0.21, meaning there is a 21% chance of getting this result if we consider that there is no influence of the predictor on the outcome.
+Adjusting for the other parameters, there seems to be about a 3 mile per gallon increase in manual cars, and this is a significant change, since our 95% confidence interval does not include 0. However, excluding a few data points takes away the significance of our model (Appendix).
 
 
 ## Conclusion
-We cannot conclude from this data that transmission type significantly improves fuel efficiency for vehicles when controlling for weight, number of cylinders and horsepower. However, our dataset is pretty small (32 observations), so a better analysis would be performed over a larger dataset, perhaps with hundreds of vehicles.
+We can conclude from this data that transmission type has a significant effect over fuel efficiency for vehicles when controlling for weight and 1/4 mile time. However, taking away a few data points takes away the significance of this relationship, suggesting our result is not very robust.
+Also, our dataset is pretty small (32 observations), so a better analysis would be performed over a larger dataset, perhaps with hundreds of vehicles.
 
 
 ## Appendix
@@ -66,42 +67,43 @@ This preliminary model indicates there is a significant effect of transmission o
 mdl <- lm(mpg~am+cyl+hp+wt,data)
 summary(mdl)$coef
 ```
-Now we see that for a fixed number of cylinders, horsepower and weight, the change from automatic to manual transmission might increase the fuel efficiency by 1.8 miles per gallon. We can create several models and test the additional information each predictor adds to the model.
+Now we see that for a fixed number of cylinders, horsepower and weight, the change from automatic to manual transmission might increase the fuel efficiency by 1.8 miles per gallon. We can use the best function to identify whether there is a better combination.
 
 ```{r}
-mdl0 <- lm(mpg~am+cyl,data)
-mdl1 <- lm(mpg~am+cyl+hp,data)
-mdl2 <- lm(mpg~am+cyl+hp+wt,data)
-mdl3 <- lm(mpg~am+cyl+hp+wt+qsec,data)
-mdl4 <- lm(mpg~am+cyl+hp+wt+qsec+drat,data)
-mdl5 <- lm(mpg~am+cyl+hp+wt+qsec+drat+disp,data)
-mdl6 <- lm(mpg~am+cyl+hp+wt+qsec+drat+disp+vs,data)
-mdl7 <- lm(mpg~am+cyl+hp+wt+qsec+drat+disp+vs+gear,data)
-mdl8 <- lm(mpg~am+cyl+hp+wt+qsec+drat+disp+vs+gear+carb,data)
+mdl0 <- lm(mpg~am+cyl+hp+wt+qsec+drat+disp+vs+gear+carb,data)
+mdlbest <- step(mdl0,direction='both',trace=FALSE)
+summary(mdlbest)$coef
 
-anova(mdltrans,mdl0,mdl1,mdl2,mdl3,mdl4,mdl5,mdl6,mdl7,mdl8)
 ```
-Therefore, we confirm that adding the number of cylinders, the horsepower and the weight of the vehicles offers more information about the fuel efficiency. That would be model 2 in our code. Finding the confidence interval for the slope of the transmission in this model:
+The best model that was found included the transmission type, weight and the 1/4 mile time, which is how fast you can transverse 1/4 of a mile. We can perform an anova test to see if adding these predictors improves the model over just using the transmission mode.
 
 ```{r}
-confint(mdl2)
+mdl1 <- lm(mpg~am+wt,data)
+
+anova(mdltrans,mdl1,mdlbest)
+
 ```
-This confidence interval contains 0, so we cannot safely attest that transmission type affects fuel efficiency. 
+We can also obtain the confidence interval for the slope of the transmission type predictor.
+
+```{r}
+confint(mdlbest)[2,]
+```
+This confidence interval does not contains 0, so we can attest that transmission type affects fuel efficiency. 
 
 Checking the residuals and other diagnostic plots:
 ```{r}
 par(mfrow=c(2,2))
-plot(mdl2)
+plot(mdlbest)
 ```
 
-We see that there are some models influencing the model, such as *Toyota Corolla*, *Toyota Corona*, *Chrysler Imperial* and *Datsuo 710*. We can try to remove those points and evaluate the effect over the model.
+We see that there are some models influencing the model, such as *Toyota Corolla*, *Toyota Corona*, *Chrysler Imperial* and *Fiat 128*. We can try to remove those points and evaluate the effect over the model.
 
 ```{r}
  data$car <- rownames(data)
-data1 <- data[!(data$car %in% c('Toyota Corolla','Toyota Corona','Chrysler Imperial','Datsuo 710')),]
-mdlnew <- lm(mpg~am+cyl+hp+wt,data1)
-confint(mdlnew)
+data1 <- data[!(data$car %in% c('Toyota Corolla','Toyota Corona','Chrysler Imperial','Fiat 128')),]
+mdlnew <- lm(mpg~am+wt+qsec,data1)
+confint(mdlnew)[2,]
 
 ```
 
-In this case, the center of the distribution is closer to 0, indicating an even less pronounced effect of transmission over fuel efficiency. 
+In this case, the confidence interval includes 0, so excluding 4 data points takes away the significance of our model and we can no longer state that transmission type influences fuel efficiency.
